[gd_scene load_steps=5 format=3 uid="uid://wojfiksfai57"]

[ext_resource type="Script" uid="uid://bt8xs01dgp1e2" path="res://core/player/weapons/weapon_basic_bow.gd" id="1_xh4mn"]
[ext_resource type="PackedScene" uid="uid://d4d2c50g7gae3" path="res://entities/components/direction-indicator/direction_indicator.tscn" id="2_3e16t"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gr1ub"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jqrdx"]
random_pitch = 1.3
streams_count = 1

[node name="WeaponBasicBow" type="Node3D"]
script = ExtResource("1_xh4mn")

[node name="DirectionIndicator" parent="." instance=ExtResource("2_3e16t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.0675354)

[node name="AudioDraw" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_gr1ub")
volume_db = 66.946
max_polyphony = 2

[node name="AudioShoot" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_jqrdx")
volume_db = 66.946
max_polyphony = 2
